crates/aura-app/tests/ui/exact_operation_lifecycle_private.stderr
error[E0433]: failed to resolve: could not find `semantic_facts` in `workflows`
 --> tests/ui/exact_operation_lifecycle_private.rs:2:38
  |
2 |     let _ = aura_app::ui::workflows::semantic_facts::publish_exact_operation_lifecycle;
  |                                      ^^^^^^^^^^^^^^ could not find `semantic_facts` in `workflows`
